kubernetes/librechat-service.yaml
apiVersion: v1
kind: Service
metadata:
   name: librechat-service
spec:
   selector:
      app: librechat
   ports:
      - protocol: TCP
        port: 80
        targetPort: 3080
   type: LoadBalancer
